# vescpp

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  cli.cpp
example/: CMakeLists.txt  example.cpp
include/vescpp/: common.hpp  vescpp.hpp
include/vescpp/comm/: can.hpp  comm.hpp
include/vescpp/packet/: packet.hpp  vesc_packets.hpp
include/vescpp/vesc/: datatypes.h  datatypes.hpp  utils.hpp
include/vescpp/vescpp/: base.hpp  device.hpp  host.hpp  target.hpp
src/: example.cpp  vescdevice.cpp  vescpp.cpp
src/comm/: can.cpp
src/packet/: packet.cpp  vesc_packets.cpp
src/packet/vesc_packets/: 000_fwversion.cpp  00_fwversion.cpp  013_014_016_017_093_095_conf.cpp  020_021_terminal.cpp
src/vesc/: utils.cpp
src/vescpp/: base.cpp  device.cpp  host.cpp  target.cpp
tests/: CMakeLists.txt  all.cpp  vescpp_tests.hpp
tests/cmake/: vescpp_test.cmake
tests/lib/: packet.cpp  vesc_packets.cpp
